# strongmail-atlas

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  template_assistant_usage_guide.md  test_db.py
.cursor/rules/: specify-rules.mdc
api/: __init__.py  errors.py  helpers.py  main.py  state.py
api/middleware/: session_guard.py
api/models/: __init__.py  requests.py  responses.py
api/postman/: StrongMail Agent Studio.postman_collection.json
api/refresh/: __init__.py  full_refresh.py  job_registry.py  job_runner.py  linked_blocks.py  locks.py  models.py  pipeline_bridge.py  progress.py  redis_sync.py  template_refresh.py
api/routers/: chat.py  health.py  preview.py  refresh.py  session.py  templates.py  tone.py  tone_batch.py  working_copy.py
api/services/: __init__.py  preview.py
api/tone_batch/: batch_tone.py  job_registry.py  job_runner.py  locks.py  models.py  progress.py
app/: async_utils.py  health.py  main.py  ml.py  models.py  session.py
app/.streamlit/: config.toml
app/components/: chat.py  preview.py  sidebar.py  tone_panel.py  working_copy.py
docker/: api-entrypoint.sh
general_agent/: __init__.py  agent.py  models.py  services.py
general_agent/ml/: __init__.py  embeddings.py
general_agent/plugins/: db_init_plugin.py
general_agent/subagents/: __init__.py  keyword_search_subagent.py  semantic_search_subagent.py  structural_query_subagent.py  tone_discovery_subagent.py
responses/: templates.json
samples/: model_factory.py  placeholder_preprocessors.py  rule_engine.py
scripts/: _t_import_test.py  scan_all_template_unresolvables.py  smoke_change_tone.py  smoke_test_resolution.py  test_api_workflow.py  unresolvables-en-skrill.json
shared/: config.py  db.py  embeddings.py  redis_client.py  test_db.py  utils.py
shared/resolution/: __init__.py  graph_builder.py  namespace.py  preprocessors.py  resolver.py  rule_parser.py  sm_rule_evaluator.py  strongmail-atlas.code-workspace
specs/001-placeholder-resolution-engine/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-template-assistant/: data-model.md  plan.md  quickstart.md  spec.md  (+2 more)
template_assistant/: __init__.py  agent.py  context.py  eligibility.py  llm.py  models.py  services.py  tone_profiles.py
tests/: test_preview_highlights.py  test_rule_parser.py
(+132 files in other folders)
