[project]
name = "strongmail-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.0",
    "json-repair>=0.58.0",
    "playwright>=1.58.0",
    "psycopg[binary]>=3.2",
    "tqdm>=4.66",
    "boto3>=1.43.14",
    "google-adk>=2.1.0",
    "litellm>=1.86.0",
    "nest-asyncio>=1.6.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "pgvector>=0.4.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "sentence-transformers>=3.4.0",
    "streamlit>=1.32.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "uvicorn>=0.30.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "trafilatura>=2.0.0",
    "transformers>=5.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "template_assistant/tests"]
pythonpath = ["."]
